c/examples/gcc/testsuite/c-c++-common/cpp/dir-only-6.c
/* Copyright 2007 Free Software Foundation, Inc.
   Contributed by Ollie Wild <aaw@google.com>.  */

/* { dg-do preprocess } */
/* { dg-options -fdirectives-only } */

/* { dg-error "unterminated comment" }
